# bazel-rbe-prost-error

./: .bazelrc  README.md  WORKSPACE.bazel
build_tools/prostgen/: BUILD  README.md  extern_path.rs  lib.rs  main.rs  module.rs  prostgen.bzl
proto/: BUILD.bazel  example.proto
